implement shareProcessNamespace in SparkPodSpec (#1262)
* implement shareProcessNamespace in SparkPodSpec

* fixup! implement shareProcessNamespace in SparkPodSpec

--- a/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -1305,6 +1305,8 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    shareProcessNamespace:
+                      type: boolean
                     sidecars:
                       items:
                         properties:
@@ -3007,6 +3009,8 @@ spec:
                       type: object
                     serviceAccount:
                       type: string
+                    shareProcessNamespace:
+                      type: boolean
                     sidecars:
                       items:
                         properties:
@@ -3709,6 +3713,8 @@ spec:
                     servicePort:
                       format: int32
                       type: integer
+                    serviceType:
+                      type: string
                   type: object
                 sparkVersion:
                   type: string
