--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -5,7 +5,6 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: (unknown)
-  creationTimestamp: null
   name: scheduledsparkapplications.sparkoperator.k8s.io
 spec:
   group: sparkoperator.k8s.io
@@ -508,6 +507,17 @@ spec:
                       - name
                       - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
@@ -1295,6 +1305,8 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    shareProcessNamespace:
+                      type: boolean
                     sidecars:
                       items:
                         properties:
@@ -2307,6 +2319,17 @@ spec:
                       - name
                       - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
@@ -2986,6 +3009,8 @@ spec:
                       type: object
                     serviceAccount:
                       type: string
+                    shareProcessNamespace:
+                      type: boolean
                     sidecars:
                       items:
                         properties:
@@ -3614,6 +3639,8 @@ spec:
                           maximum: 49151
                           minimum: 1024
                           type: integer
+                        portName:
+                          type: string
                       required:
                       - jmxExporterJar
                       type: object
