--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,9 +29,6 @@ jobs:
       - name: unit tests
         run: make test
 
-      - name: integration tests
-        run: make test
-
   it:
     runs-on: ubuntu-latest
     steps:
@@ -67,6 +64,9 @@ jobs:
 
       - name: Run chart-testing (lint)
         run: ct lint
+
+      - name: Detect CRDs drift between chart and manifest
+        run: make detect-crds-drift
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.0.0
