Add hook deletion policy for spark-operator service account (#1313)
* Add hook deletion policy for service account

* Bump chart version

--- a/charts/spark-operator-chart/templates/serviceaccount.yaml
+++ b/charts/spark-operator-chart/templates/serviceaccount.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "spark-operator.serviceAccountName" . }}
   annotations:
     "helm.sh/hook": pre-install
+    "helm.sh/hook-delete-policy": hook-failed
   labels:
     {{- include "spark-operator.labels" . | nindent 4 }}
 {{- end }}
