--- a/spark-docker/Dockerfile
+++ b/spark-docker/Dockerfile
@@ -27,8 +27,8 @@ RUN chmod 644 $SPARK_HOME/jars/guava-23.0.jar
 # Add the connector jar needed to access Google Cloud Storage using the Hadoop FileSystem API.
 ADD https://storage.googleapis.com/hadoop-lib/gcs/gcs-connector-latest-hadoop2.jar $SPARK_HOME/jars
 RUN chmod 644 $SPARK_HOME/jars/gcs-connector-latest-hadoop2.jar
-ADD https://storage.googleapis.com/spark-lib/bigquery/spark-bigquery-latest.jar $SPARK_HOME/jars
-RUN chmod 644 $SPARK_HOME/jars/spark-bigquery-latest.jar
+ADD https://storage.googleapis.com/spark-lib/bigquery/spark-bigquery-latest_2.12.jar $SPARK_HOME/jars
+RUN chmod 644 $SPARK_HOME/jars/spark-bigquery-latest_2.12.jar
 
 # Setup for the Prometheus JMX exporter.
 # Add the Prometheus JMX exporter Java agent jar for exposing metrics sent to the JmxSink to Prometheus.
