--- a/charts/spark-operator-chart/templates/serviceaccount.yaml
+++ b/charts/spark-operator-chart/templates/serviceaccount.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-delete-policy": hook-failed
+{{- with .Values.serviceAccounts.sparkoperator.annotations }}
+{{ toYaml . | indent 4 }}
+{{- end }}
   labels:
     {{- include "spark-operator.labels" . | nindent 4 }}
 {{- end }}
