webhook timeout variable (#1387)
* Added webhook timeout variable

* made timeout variable to be private

* Fixed chart version

Co-authored-by: Sairaman Kumar <sairamank@in.ibm.com>

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -90,6 +90,8 @@ webhook:
   cleanupAnnotations:
     "helm.sh/hook": pre-delete, pre-upgrade
     "helm.sh/hook-delete-policy": hook-succeeded
+    # -- Webhook Timeout in seconds
+  timeout: 30
 
 metrics:
   # -- Enable prometheus metric scraping
