Improve github CI, and helm default docker version (#1415)
Add a docker build into the github CI, even if we don't use it, and also
stop using latest as the default container version, as it is clearly wrong, and
the latest tag hasn't been updated in a long time.

travis-ci.org has stopped building the code for this repository as well, so we should
focus on github workflows. Ideally we'd move the building of the docker container into
github as well because then at least all CI is managed in one place.

Signed-off-by: Tom Hellier <me@tomhellier.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,6 +47,12 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Build Spark-Operator Docker Image
+        run: |
+          tag=$(git describe --tags --dirty)_v3.1.1
+          docker build -t gcr.io/spark-operator/spark-operator:${tag} .
+          docker build -t gcr.io/spark-operator/spark-operator:local .
+
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
@@ -68,8 +74,25 @@ jobs:
       - name: Detect CRDs drift between chart and manifest
         run: make detect-crds-drift
 
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+      - name: setup minikube
+        uses: manusa/actions-setup-minikube@v2.4.2
+        with:
+          minikube version: "v1.24.0"
+          kubernetes version: "v1.20.8"
+          start args: --memory 6g --cpus=2 --addons ingress
+          github token: ${{ inputs.github-token }}
 
       - name: Run chart-testing (install)
-        run: ct install
+        run: |
+          tag=$(git describe --tags --dirty)_v3.1.1
+          minikube image load gcr.io/spark-operator/spark-operator:local
+          ct install
+
+      # The integration tests are currently broken see: https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/issues/1416
+      # - name: Run chart-testing (integration test)
+      #   run: make it-test
+      
+      - name: Setup tmate session
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 15
