use github container registry instead of gcr.io for releases (#1422)
* use github container registry instead of gcr.io for releases

It appears that it is possible looking at this workflow.

https://github.com/GoogleCloudPlatform/gke-autoneg-controller/blame/master/.github/workflows/go.yml

It can only be done on the master branch though, so can't find out until after merge

Update main.yaml

Update main.yaml

* Update to use github token

Following the guidance 
from here. This stil might not work, but I don't think there is anthing else that can be done. https://github.blog/changelog/2021-03-24-packages-container-registry-now-supports-github_token/

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,8 +80,7 @@ jobs:
 
       - name: Build Spark-Operator Docker Image
         run: |
-          DOCKER_TAG=$(cat charts/spark-operator-chart/Chart.yaml | grep "appVersion: .*" | cut -c13-)
-          docker build -t gcr.io/spark-operator/spark-operator:${DOCKER_TAG} .
+          docker build -t gcr.io/spark-operator/spark-operator:latest .
 
       - name: Check changes in resources used in docker file
         run: |
@@ -97,7 +96,7 @@ jobs:
               fi
             fi
           done
-          
+
   build-helm-chart:
     runs-on: ubuntu-latest
     steps:
