--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,27 +24,31 @@ jobs:
         with:
           version: v3.7.1
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.10
-
       # TODO: Maintainer of repository to follow:
       # https://github.com/docker/login-action#google-container-registry-gcr to add credentials so
       # we can push from github actions
-      # - name: log in to container registry
+      # - name: log in to google container registry
       #   uses: docker/login-action@v1
       #   with:
       #     registry: gcr.io
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Release Spark-Operator Docker Image
+      - name: Release Spark-Operator Docker Image to github container registry
         run: |
           DOCKER_TAG=$(cat charts/spark-operator-chart/Chart.yaml | grep "appVersion: .*" | cut -c13-)
           docker build -t gcr.io/spark-operator/spark-operator:${DOCKER_TAG} .
           echo "Ideally, we'd release the docker container at this point, but the maintainer of this repo needs to approve..."
-          if ! docker pull docker pull gcr.io/spark-operator/spark-operator:${DOCKER_TAG}; then
-            echo "docker push gcr.io/spark-operator/spark-operator:${DOCKER_TAG}"
+          docker tag gcr.io/spark-operator/spark-operator:${DOCKER_TAG} ghcr.io/googlecloudplatform/spark-operator:${DOCKER_TAG}
+          if ! docker pull ghcr.io/googlecloudplatform/spark-operator:${DOCKER_TAG}; then
+            docker push ghcr.io/googlecloudplatform/spark-operator:${DOCKER_TAG}
             git tag $DOCKER_TAG
             git push origin $DOCKER_TAG
           fi
