Updated default registry to ghcr.io (#1454)
* Updated default registry to ghcr.io

* Bumped chart version and built api-docs

* Updated build-helm-chart job, step Run chart-testing (install) to look for the correct registry

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -8,7 +8,7 @@ replicaCount: 1
 
 image:
   # -- Image repository
-  repository: gcr.io/spark-operator/spark-operator
+  repository: ghcr.io/googlecloudplatform/spark-operator
   # -- Image pull policy
   pullPolicy: IfNotPresent
   # -- if set, override the image tag whose default is the chart appVersion.
