Add Operator volumes and volumeMounts in chart (#1475)
* Operator volumes and volumeMounts

* Update values.yaml

* Update Chart.yaml

chart version up to 1.1.18

* Update Chart.yaml

1.1.19

* Update values.yaml

remove white space

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -74,6 +74,12 @@ podSecurityContext: {}
 # securityContext -- Operator container security context
 securityContext: {}
 
+# volumes - Operator volumes
+volumes: []
+
+# volumeMounts - Operator volumeMounts
+volumeMounts: []
+
 webhook:
   # -- Enable webhook server
   enable: false
