fix: add pre-upgrade hook to rbac resources (#1511)
Signed-off-by: York Chen <ychen@d2iq.com>

--- a/charts/spark-operator-chart/templates/serviceaccount.yaml
+++ b/charts/spark-operator-chart/templates/serviceaccount.yaml
@@ -4,8 +4,9 @@ kind: ServiceAccount
 metadata:
   name: {{ include "spark-operator.serviceAccountName" . }}
   annotations:
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": pre-install, pre-upgrade
     "helm.sh/hook-delete-policy": hook-failed, before-hook-creation
+    "helm.sh/hook-weight": "-10"
 {{- with .Values.serviceAccounts.sparkoperator.annotations }}
 {{ toYaml . | indent 4 }}
 {{- end }}
