--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,15 +42,15 @@ jobs:
   build-sparkctl:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-
       - name: Checkout source code
         uses: actions/checkout@v2
         with:
           fetch-depth: "0"
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
 
       - name: build sparkctl
         run: |
@@ -59,15 +59,15 @@ jobs:
   build-spark-operator:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-
       - name: Checkout source code
         uses: actions/checkout@v2
         with:
           fetch-depth: "0"
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
 
       - name: Run gofmt check
         run: make fmt-check
@@ -155,15 +155,15 @@ jobs:
   integration-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-
       - name: Checkout source code
         uses: actions/checkout@v2
         with:
           fetch-depth: "0"
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
 
       - name: setup minikube
         uses: manusa/actions-setup-minikube@v2.4.2
@@ -181,7 +181,7 @@ jobs:
       # The integration tests are currently broken see: https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/issues/1416
       # - name: Run chart-testing (integration test)
       #   run: make integation-test
-      
+
       - name: Setup tmate session
         if: failure()
         uses: mxschmitt/action-tmate@v3
