--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,13 +1,19 @@
-name: Pre-commit checks
+name: Integration Test
 
 on:
   pull_request:
     branches:
       - master
+      - release-*
 
   push:
     branches:
       - master
+      - release-*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.actor }}
+  cancel-in-progress: true
 
 jobs:
   build-api-docs:
@@ -15,8 +21,6 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: "0"
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -37,17 +41,14 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: "0"
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: "go.mod"
+          go-version-file: go.mod
 
       - name: build sparkctl
-        run: |
-          make build-sparkctl
+        run: make build-sparkctl
 
   build-spark-operator:
     runs-on: ubuntu-latest
@@ -55,17 +56,17 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
         with:
-          fetch-depth: "0"
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: "go.mod"
+          go-version-file: go.mod
 
       - name: Run go fmt check
         run: make go-fmt
 
-      - name: Run go vet
+      - name: Run go vet check
         run: make go-vet
 
       - name: Run unit tests
@@ -92,17 +93,53 @@ jobs:
   build-helm-chart:
     runs-on: ubuntu-20.04
     steps:
+      - name: Determine branch name
+        id: get_branch
+        run: |
+          BRANCH=""
+          if [ "${{ github.event_name }}" == "push" ]; then
+            BRANCH=${{ github.ref_name }}
+          elif [ "${{ github.event_name }}" == "pull_request" ]; then
+            BRANCH=${{ github.base_ref }}
+          fi
+          echo "Branch name: $BRANCH"
+          echo "BRANCH=$BRANCH" >> "$GITHUB_OUTPUT"
+
       - name: Checkout source code
         uses: actions/checkout@v4
         with:
-          fetch-depth: "0"
+          fetch-depth: 0
 
       - name: Install Helm
         uses: azure/setup-helm@v4
         with:
           version: v3.14.3
 
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.6.1
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        env:
+          BRANCH: ${{ steps.get_branch.outputs.BRANCH }}
+        run: |
+          changed=$(ct list-changed --target-branch $BRANCH)
+          if [[ -n "$changed" ]]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Run chart-testing (lint)
+        if: steps.list-changed.outputs.changed == 'true'
+        env:
+            BRANCH: ${{ steps.get_branch.outputs.BRANCH }}
+        run: ct lint --check-version-increment=false --target-branch $BRANCH
+
+      - name: Detect CRDs drift between chart and manifest
+        if: steps.list-changed.outputs.changed == 'true'
+        run: make detect-crds-drift
+
       - name: Produce the helm documentation
+        if: steps.list-changed.outputs.changed == 'true'
         run: |
           make helm-docs
           if ! git diff --quiet -- charts/spark-operator-chart/README.md; then
@@ -110,27 +147,8 @@ jobs:
             false
           fi
 
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.6.1
-
-      - name: Print chart-testing version information
-        run: ct version
-
-      - name: Run chart-testing (lint)
-        run: ct lint
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          changed=$(ct list-changed)
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
-          fi
-
-      - name: Detect CRDs drift between chart and manifest
-        run: make detect-crds-drift
-
       - name: setup minikube
+        if: steps.list-changed.outputs.changed == 'true'
         uses: manusa/actions-setup-minikube@v2.11.0
         with:
           minikube version: v1.33.0
@@ -139,6 +157,7 @@ jobs:
           github token: ${{ inputs.github-token }}
 
       - name: Run chart-testing (install)
+        if: steps.list-changed.outputs.changed == 'true'
         run: |
           docker build -t docker.io/kubeflow/spark-operator:local .
           minikube image load docker.io/kubeflow/spark-operator:local
